--- a/mains.css
+++ b/mains.css
@@ -64,7 +64,7 @@ footer {
 }
 
 #imgheader {
-  width: 80%;
+  width: 10%;
   height: 100%;
   position: relative;
   float: left;
@@ -73,11 +73,13 @@ footer {
 .mainheaderp {
   font-family: 'Bubbler One', sans-serif;
   font-size: 2vw;
+  float: right;
 }
 
 .secondheaderp {
   font-family: 'Bubbler One', sans-serif;
   font-size: 2vw;
+  float: right;
 }
 
 .contentimg {
